Fixed navigation gap

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ input:required {
     color: #fff;
     background: #131c27;
     position: sticky;
-    top: 0;
+    top: -1px;
     z-index: 10;
 }
 
